--- a/src/components/options/options.css
+++ b/src/components/options/options.css
@@ -40,7 +40,6 @@
     background-color: var(--options-popup-bg);
     border: 2px solid var(--options-popup-border);
     border-radius: 5px;
-    z-index: 1001;
     display: none;
     flex-direction: column;
 }
